prevent running out of memory when loading map, and reflow carousel to make it visible again when scrolling up

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -41,6 +41,10 @@ h2 {
 
 th, td {
     padding: 0 12px 4px 0;
+} 
+
+.house {
+    min-height: 4440px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
